# rocket-RUST

./: .env  .gitignore  Cargo.toml  README.md
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  routes.rs
src/entities/: users.rs
