[package]
name = "db-rust"
version = "0.0.1"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
sea-orm = { version = "0.9", features = ["sqlx-postgres","runtime-async-std-native-tls", "macros"] }
jsonwebtoken = "8.0"
#sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }  # Correct feature for tokio and rustls
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.11"
log = "0.4"
lettre = "0.10"
chrono = "0.4"
rand = "0.8"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
sea-orm-cli = "0.9"